Close protection-lite stage and reconcile repository